# filesystem-metadata-reconstruction

./: .gitignore  Task desgin.md  Task design.md  acceptance_report.md  acceptance_report_resubmission.md  implementation_plan.md  instruction.md  task.toml
archive/datasets/: data.csv
archive/documents/: report.txt
data/metadata/: archive-001.json  archive-002.json  corrupted-001.json
environment/: Dockerfile
filesystem-metadata-reconstruction/: README_INTERNAL.md  instruction.md  task.toml
filesystem-metadata-reconstruction/environment/: Dockerfile  docker-compose.yaml
filesystem-metadata-reconstruction/environment/seed/archive/documents/: readme.md
filesystem-metadata-reconstruction/environment/seed/metadata/: catalog.json
filesystem-metadata-reconstruction/environment/seed/metadata/indexes/: stale_index.json
filesystem-metadata-reconstruction/environment/seed/metadata/manifests/: root.manifest
filesystem-metadata-reconstruction/environment/seed/tools/: check-integrity.sh  full-validation.sh
filesystem-metadata-reconstruction/solution/: solve.sh
filesystem-metadata-reconstruction/submission/: form-answers.md
filesystem-metadata-reconstruction/tests/: test.sh  test_outputs.py
filesystem-metadata-reconstruction/tests/hidden/: test_hidden.py
metadata/: catalog.json
metadata/indexes/: checksum_index.json  id_index.json  path_index.json  type_index.json
metadata/manifests/: root.manifest
project/: Dockerfile  pyproject.toml  requirements.txt
project/.github/workflows/: ci.yml
project/src/application/: __init__.py  utils.py
project/src/internal_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project/tests/: test_config.py  test_core.py
reports/: reconstruction.json
solution/: LICENSE  Main.hs  filesystem-reconstruction.cabal
submission/: form-answers.md
task/: instruction.md  task.toml
task/environment/: Dockerfile
task/environment/project/: pyproject.toml  requirements.txt
task/environment/project/src/internal_service/: core.py
task/project/: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
task/project/.github/workflows/: ci.yml
task/project/scripts/: build.sh
task/project/src/application/: config.py  main.py
task/project/src/internal_service/: __init__.py
task/project/tests/: test_core.py
task/solution/: solve.sh
task/submission/: form-answers.md
task/submission/project_files/: Dockerfile
task/tests/: test.sh  test_core.py  test_docker_build.py  test_installation.py  test_pytest_suite.py
task/tests/hidden/: test_clean_install.py  test_dependency_stability.py  test_docker_reproducibility.py  test_regression.py
task/tests/public/: test_build_system.py
tests/hidden/: run_hidden_tests.sh
tests/visible/: run_visible_tests.sh
tools/: validate-schema.sh  verify-checksums.sh
