[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internal-service"
version = "1.0.0"
description = "Internal Python service"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Engineering Team", email = "engineering@example.com" }
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
