cabal-version:      3.0
name:               filesystem-reconstruction
version:            1.0.0.0
synopsis:           Filesystem Metadata Reconstruction Oracle
description:        Oracle solution for reconstructing filesystem metadata from corrupted archives
license:            MIT
license-file:       LICENSE
author:             Terminal-Bench Contributor
maintainer:         benchmark@example.com
category:           System
build-type:         Simple

executable filesystem-reconstruction
    main-is:          Main.hs
    build-depends:    base ^>=4.17
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , filepath
                    , text
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -Wall -O2
