[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "internal-service"
version = "1.0.0"
description = "Internal service for company operations"
requires-python = ">=3.10"

dependencies = [
    "requests==2.31.0",
    "urllib3==2.2.2",
    "botocore==1.29.165",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

